# PS-Wraith

./: .gitignore  README.md  test_magi_zone.py
AndroidRoot/: README.md  __init__.py  adb_root_chain.py  android_nand_tool.py  android_root_chain.py  avb_bypass.py  boot_image_patcher.py  fastboot_exploit.py  main.py  mediatek_brom.py  qualcomm_edl.py  ramdisk_booter.py  silicon_burner_android.py
IOsrom/: .gitignore  3utools_integration.py  ASR_WRITE.py  BLOCK_TSS_SERVER.py  BOOT_RAMDISK_CORRECT.py  BOOT_RAMDISK_SSH.py  BOOT_RESTORE_RAMDISK.py  CHECK_MODE.py  CHECK_RAMDISK_BOOT.py  CREATE_FAKE_TSS.py  DEBUG_WSL.py  DECRYPT_AND_BOOT.py  DFU_LOAD_DIRECT.py  DIRECT_ASR_PROTOCOL.py  DOWNLOAD_CHECKRA1N.py  ENTER_DFU_AND_LOAD.py  FINAL_CHECKRA1N_RESTORE.py  FINAL_NAND_FLASH.py  FINAL_RAMDISK_BOOT.py  FINAL_SOLUTION.md  FINAL_TSS_BYPASS.py  FIX_BOOTLOOP.py  FIX_WSL_USB.py  FREEZE_NONCE_RESTORE.py  HYBRID_IPSW.py  IDEVICERESTORE_GUIDE.md  INSTALL_DFU_DRIVER.py  IPADOS26_WITH_IOS433_KERNEL.py  LAYERED_IPSW.py  LOCAL_TSS_SERVER.py  MANUAL_NAND_WRITE_FINAL.py  MASK_AS_IPADOS26.py  MOUNT_DMG_EXTRACT_ASR.py  PROPER_TSS_SERVER.py  PUSH_TO_GITHUB.py  PWNED_DFU_RESTORE.py  RAMDISK_WITH_ADDRESS.py  RECOVERY_DIRECT_BOOT.py  RECOVERY_TO_DFU.py  REDSN0W_TETHERED_BOOT.md  (+138 more)
Vemex/: claro_portal_auth.py  seedgate_integration.py  vemex_active_watchdog_bypass.py  vemex_captive_bypass.py  vemex_cookie_cache_poison.py  vemex_development_runner.py  (+11 more)
wraithps4-serv-backup-performance booster/rust_executor/: Cargo.toml
wraithps4-serv-backup-performance booster/rust_executor/src/: main.rs
(+95 files in other folders)
